--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "scrape-it-like-you-mean-it",
   "version": "1.0.0",
-  "description": "",
+  "description": "Scrapping news from The Guardian UK US edition",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mongoose": "^5.0.17",
+    "morgan": "^1.9.0",
     "npm": "^6.0.0",
     "request": "^2.85.0"
   }
